<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="0dp"
...
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="0dp"
                android:padding="0dp"
            >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonBack"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="&lt;"
                />
<!--                    android:layout_margin="0dp"-->
<!--                    android:padding="0dp"-->
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
            >
                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:id="@+id/main_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:textColor="@android:color/white" />
                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:id="@+id/main_toolbar_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
...
                    android:id="@+id/webview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                />
                -->
                <FrameLayout
                    android:id="@+id/webview_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </FrameLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tabframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible"
    >
        <RelativeLayout
...
<!--                android:id="@+id/showWe"-->
<!--            android:title="Tabs""-->
<!--                android:layout_width=""-->
<!--                android:layout_height=""-->
<!--            />-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="+"
            />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tab_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        />
<!--            android:padding="5dp"-->
    <!--        first, have a button added dynamically every time a WebView is created ..
                let the button have page title as only text.-->
...
