<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab"
    android:orientation="vertical"
    android:padding="0dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
>
<!--        android:layout_gravity="top|left"-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tab_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:maxLines="1"
        android:textAlignment="viewStart"
        android:minHeight="30dp"
        android:minWidth="30dp"
        android:layout_margin="0dp"
        android:layout_marginStart="20dp"
        android:padding="0dp"
        android:elevation="2dp"
        tools:ignore="RtlCompat"
    />
<!--        android:background="@android:color/transparent"-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/close_tab"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        app:backgroundTint="@android:color/holo_purple"
        android:textColor="@color/colorPrimary"
        android:minHeight="30dp"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:text="X"
        android:elevation="2dp"
    />
    <!-- on todistettu, että kun thumbnail containerilla on border, thumbnailin ympärillä näkyy border. -->
    <FrameLayout
        android:id="@+id/tab_thumbnail_container"
        android:layout_below="@+id/tab_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
    >
<!--        android:layout_margin="5dp"-->
<!--        android:padding="5dp"-->
        <!--
        -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tab_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp"
        />
        <!--
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
        -->
    </FrameLayout>
</RelativeLayout>