<resources>
    <string name="app_name">%{APP_NAME}</string>
    <string name="url">%{URL}</string>
    <string name="action_copy_url_to_clipboard">Copy URL to clipboard</string>
    <string name="action_share_link">Share URL to another app</string>
    <string name="action_open_link_in_new_tab">Open link in new tab</string>
    <string name="link_contains_an_unallowed_url">Link URL not allowed</string>
</resources>

