...
          android:title="Share"
          app:showAsAction="never"
          app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
    />

    <item android:id="@+id/action_mode_change"
          android:title="Desktop/Mobile"
          app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="Settings"
          app:showAsAction="never"/>
</menu>
